Tratamento de Erro na Inserção Resolvido